[gd_scene load_steps=18 format=3 uid="uid://dh01oxe50pj27"]

[ext_resource type="Script" path="res://scenes/app/scripts/app.gd" id="1_ov0up"]
[ext_resource type="PackedScene" uid="uid://dweckt5oraox7" path="res://scenes/game_button/game_button.tscn" id="2_t5myg"]
[ext_resource type="Texture2D" uid="uid://dt4qwfs1yjhx3" path="res://scenes/shared/visuals/gradient_bg.tres" id="3_0g1gi"]
[ext_resource type="Shader" path="res://scenes/shared/shaders/blur.gdshader" id="3_n8sr3"]
[ext_resource type="Shader" path="res://scenes/shared/shaders/texture_blend.gdshader" id="4_7um57"]
[ext_resource type="Script" path="res://scenes/app/scripts/version.gd" id="4_df76v"]
[ext_resource type="Script" path="res://scenes/carousel/scripts/carousel.gd" id="4_yrr54"]
[ext_resource type="Texture2D" uid="uid://dph8j6sb0fjbv" path="res://scenes/game_button/visuals/bg_test.png" id="5_o0uvn"]
[ext_resource type="Script" path="res://scenes/app/scripts/bg_blend.gd" id="6_2ddv3"]
[ext_resource type="Script" path="res://scenes/video_player/scripts/video_player.gd" id="10_dod4b"]
[ext_resource type="Texture2D" uid="uid://dr4kg5w8jskhd" path="res://shared/visuals/play.png" id="10_gt0gt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_psg6v"]
shader = ExtResource("4_7um57")
shader_parameter/mix_value = 0.0
shader_parameter/texture_1 = ExtResource("3_0g1gi")
shader_parameter/texture_2 = ExtResource("5_o0uvn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qsltc"]
shader = ExtResource("3_n8sr3")
shader_parameter/lod = 4.731

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w6y87"]
bg_color = Color(0.0313726, 0.0313726, 0.0313726, 0.419608)

[sub_resource type="Gradient" id="Gradient_tkc6x"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pij08"]
gradient = SubResource("Gradient_tkc6x")

[sub_resource type="LabelSettings" id="LabelSettings_wrab5"]
font_size = 20

[node name="App" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ov0up")
game_button = ExtResource("2_t5myg")
default_bg = ExtResource("3_0g1gi")

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color(0.486275, 0.486275, 0.486275, 1)
material = SubResource("ShaderMaterial_psg6v")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0g1gi")
script = ExtResource("6_2ddv3")

[node name="GradientBG2" type="TextureRect" parent="."]
self_modulate = Color(0.486275, 0.486275, 0.486275, 1)
material = SubResource("ShaderMaterial_qsltc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0g1gi")

[node name="Darken" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.4)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="Games" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -188.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_yrr54")
button_offset = Vector2(75, 0)

[node name="NoGameFound" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "No games found"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionBtn" type="LinkButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -52.0
offset_right = -24.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 22
text = "0.1.3"
underline = 1
uri = "https://api.github.com/repos/MrEliptik/GameLauncher/releases/latest"
script = ExtResource("4_df76v")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -478.0
offset_top = 140.0
offset_right = 478.0
offset_bottom = 432.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_w6y87")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Description" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Description"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Game name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NotPlayable" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Description"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0, 0.216667, 1)
theme_override_font_sizes/font_size = 26
text = "NOT PLAYBLE"
vertical_alignment = 1

[node name="Description" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Description"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
vertical_alignment = 1
autowrap_mode = 3

[node name="QRContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="QRRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/QRContainer"]
texture_filter = 1
custom_minimum_size = Vector2(196, 196)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = SubResource("GradientTexture2D_pij08")
expand_mode = 3
stretch_mode = 4

[node name="QRLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/QRContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "WIshlist on Steam"
label_settings = SubResource("LabelSettings_wrab5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VideoBtn" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/QRContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/QRContainer/VideoBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/QRContainer/VideoBtn/HBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("10_gt0gt")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/QRContainer/VideoBtn/HBoxContainer"]
layout_mode = 2
text = "Play trailer"
label_settings = SubResource("LabelSettings_wrab5")

[node name="MouseFilter" type="ColorRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true
loop = true
script = ExtResource("10_dod4b")

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/QRContainer/VideoBtn" to="." method="_on_video_btn_pressed"]
